# fpat

./: .gitignore  MANIFEST.in  README.md  TODO.md  TODO_CLI_CONFIG.md  build_and_install.sh  build_exe.py  fpat.yaml  pyproject.toml  requirements.txt  분석결과.md  분석모듈_연동_고도화_방안.md
fpat/: __init__.py  __main__.py  workflow_wizard.py
fpat/firewall_analyzer/: README.md  __init__.py  cli.py
fpat/firewall_analyzer/core/: __init__.py  policy_resolver.py  redundancy_analyzer.py
fpat/firewall_module/: README.md  __init__.py  cli.py  exporter.py  utils.py
fpat/firewall_module/mf2/: mf2_collector.py  mf2_module.py
fpat/firewall_module/ngf/: ngf_module.py
fpat/firewall_module/paloalto/: paloalto_collector.py  paloalto_module.py
fpat/paloalto_parameter_checker/: README.md  report.py  ssh_checker.py
fpat/policy_comparator/: README.md
fpat/policy_deletion_processor/: README.md  __init__.py  cli.py  main.py
fpat/policy_deletion_processor/core/: __init__.py  config_manager.py  pipeline.py
fpat/policy_deletion_processor/processors/: __init__.py  application_aggregator.py  auto_collector.py  auto_renewal_checker.py  base_processor.py  bottom_latest_policy_validator.py  duplicate_exception_applier.py  duplicate_expired_cleaner.py  duplicate_policy_classifier.py  exception_handler.py  merge_hitcount.py  mis_id_adder.py  notification_classifier.py  policy_usage_processor.py  redundancy_processor.py  request_extractor.py  request_info_adder.py  request_parser.py  하단최신정책검증.py
fpat/policy_deletion_processor/utils/: __init__.py  file_manager.py
